campaigns_deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: campaigns-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  selector:
    app: campaigns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaigns
spec:
  selector:
    matchLabels:
      app: campaigns
  replicas: 2
  template:
    metadata:
      labels:
        app: campaigns
    spec:
      containers:
        - name: campaigns
          image: httpd:alpine3.17
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: campaigns-index
              mountPath: /usr/local/apache2/htdocs/index.html
              subPath: index.html
      volumes:
        - name: campaigns-index
          configMap: 
            name: campaigns-config
            items:
              - key: index.html
                path: index.html
