orders_deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  selector:
    matchLabels:
      app: orders
  replicas: 2
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: httpd:alpine3.17
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: orders-index
              mountPath: /usr/local/apache2/htdocs/
              subPath: index.html
      volumes:
        - name: orders-index
          configMap: 
            name: orders-config
            items:
              - key: index.html
                path: index.html
