page1_deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: page1-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: page1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page1-deployment
spec:
  selector:
    matchLabels:
      app: page1
  replicas: 2
  template:
    metadata:
      labels:
        app: page1
    spec:
      containers:
        - name: page1
          image: httpd:alpine3.17
          ports:
            - containerPort: 80
          volumeMounts:
            - name: page1-index
              mountPath: /usr/local/apache2/htdocs/index.html
              subPath: index.html
      volumes:
        - name: page1-index
          configMap: 
            name: page1-config
            items:
              - key: index.html
                path: index.html
