ingress_rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
     - http:
        paths:
          - path: /campaigns
            pathType: Prefix
            backend:
              service:
                name: campaigns-service
                port:
                  number: 8000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 8080
