ingress_service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
     - http:
        paths:
          - path: /page1
            pathType: Prefix
            backend:
              service:
                name: page1-service
                port:
                  number: 80
          - path: /page2
            pathType: Prefix
            backend:
              service:
                name: page2-service
                port:
                  number: 80
